<resources>
    <string name="app_name">MensagensApp</string>
    <string name="photo">Foto</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="here_the_world_is_small_here_everybody_communicate">Here the world is small , here everybody communicate!!</string>
</resources>